# oxdb-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.client.ipynb  test.ipynb  test.lg2.ipynb  test.log.ipynb  test.oxd.ipynb  test.py  test.vector.ipynb
docs/: ai.vector.md  api.log.md  client.log.md  core.log.md  db.log.md  db.vector.md  docs.md  plan.md  shell.log.md
docs/oxdblite/: README.md  client.log.md  core.log.md  server.log.md  theory.md
docs/oxdblite/oxdoc/: README.md  kvdb.md
docs/oxdoclite/: README.md
ox_db/: settings.py
ox_db/ai/: embed.py  transfomer.py  vector.py
ox_db/api/: log.py
ox_db/client/: log.py
ox_db/db/: lg2.py  log.py  search.py  types.py
ox_db/oxd/: __init__.py
ox_db/server/: log.py
ox_db/server/assets/: index.html
ox_db/shell/: log.py  log_api.py
ox_db/utils/: dp.py
oxdb/: __init__.py  settings.py
oxdb-lite_js/: README.md  index.js  package.json  test.mjs
oxdb-lite_js/db/: log.js
oxdb/ai/: __init__.py  embed.py
oxdb/client/: __init__.py  log.py
oxdb/core/: __init__.py  log.py  types.py
oxdb/server/: __init__.py  __main__.py  log.py
oxdb/shell/: __init__.py  __main__.py  cli.py
oxdb/utils/: dp.py
oxdb_lite/: __init__.py  config.py
oxdb_lite/ai/: __init__.py  embed.py
oxdb_lite/client/: __init__.py  log.py
oxdb_lite/core/: __init__.py  log.py  types.py
oxdb_lite/oxdoc/: __init__.py  dp.py
oxdb_lite/oxdoc/db/: __init__.py  cache.py  freeindex.py  ld.py  mem.py
oxdb_lite/oxdoc/doc/: markdown.py
oxdb_lite/oxdoc_lite/: __init__.py  dp.py  oxdbin.py  utils.py
oxdb_lite/oxdoc_lite/db/: __init__.py  ld.py  mem.py
oxdb_lite/server/: __init__.py  __main__.py  log.py
oxdb_lite/shell/: __init__.py  __main__.py  cli.py  log.py
py-notebooks/oxdblite/: test.client.ipynb  test.ipynb  test.log.ipynb  test.vector.ipynb
py-notebooks/oxdblite/oxdoc/: test.dbin.ipynb  test.ipynb  test.oxd.ipynb  test.oxdbin.ipynb
py-notebooks/oxdoclite/: test.dbin.ipynb  test.ipynb  test.oxd.ipynb  test.oxdbin.ipynb
scripts/: build.sh  chat.py  ox_db.shell.py
test/: client.log.test.py  test.oxd.py  test_shell_syntex.py
test/oxdblite/: client.log.test.py  test_shell_syntex.py
test/oxdoclite/: file_index.py  lrc_cache.py  measure_time.py  oxdmem.py  perfomance_profiling.py  unittest_run.py
