[project]
name = "oxdb-lite"
version = "0.0.1"
# dynamic = ["version"]

authors = [
  { name = "Lokeshwaran M", email = "Lokeshwaran.m23072003@gmail.com" }
]
description = "An OX-AI db"
keywords = ["oxdb-lite","oxdoc-lite","ox-dblite","ox-doclite","ox-ai"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
"fastapi",
"numpy",
"pydantic",
"requests",
"setuptools",
"uvicorn",
"sortedcontainers",
"ox-onnx @ git+https://github.com/ox-ai/ox-onnx.git#egg=ox-onnx",
]

[project.scripts]
"oxdblite.shell" = "oxdb_lite.shell.cli:main"
"oxdblite.server" = "oxdb_lite.server.log:main"

[project.urls]
"Homepage" = "https://github.com/ox-ai/oxdb-lite"
"Bug Tracker" = "https://github.com/ox-ai/oxdb-lite/issues"

[build-system]
requires = ["setuptools>=61.0","wheel", "setuptools-git-versioning", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

#[tool.setuptools_scm]
#local_scheme = "no-local-version"

#[tool.setuptools]
#packages = ["ox-db"]
#include_package_data = false
#packages.find.include = []

#[tool.setuptools.package-data]
#"ox-db" = ["requirements.txt"]





